Fix: Corrige bug no serviço de autenticação de usuário
O método de autorização no UsuarioService estava utilizando findById em vez de findByTituloEleitoral para buscar o usuário, o que causava falhas nos testes.

Esta alteração corrige a lógica de busca e alinha o serviço com o repositório, resolvendo as falhas nos testes de unidade.

Obs: Falhas preexistentes nos testes de integração persistem devido a um problema de configuração do ApplicationContext.